Fix side by side canvas view so image is not cut off

--- a/sass/_controls.scss
+++ b/sass/_controls.scss
@@ -21,6 +21,7 @@ input[type="radio"]{
 
 .image-canvas-container{
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     margin-top: 25px;
 }
